Fix contact information - remove non-existent email addresses
- Keep only verified email: marco.delpin@gmail.com
- Remove support@pinesoft.dev and business@pinesoft.dev
- Maintain professional contact section

--- a/index.html
+++ b/index.html
@@ -130,9 +130,7 @@
 <p>If you have questions about this Privacy Policy, our privacy practices, or our games:</p>
 <p><strong>Developer:</strong> Marco Del Pin<br>
 <strong>Company:</strong> PineSoft<br>
-<strong>Email:</strong> marco.delpin@gmail.com<br>
-<strong>Support:</strong> support@pinesoft.dev<br>
-<strong>Business Contact:</strong> business@pinesoft.dev</p>
+<strong>Email:</strong> marco.delpin@gmail.com</p>
 
 <p><strong>Response Time:</strong> We typically respond to privacy inquiries within 48 hours.</p>
 </div>
