Use PineSoft branded contact information
- Replace personal name with company branding
- Use support@pinesoft.dev (with email forwarding)
- Add pinesoft.dev website reference
- Maintain professional company image
- Remove direct personal references

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 <div class="contact">
 <h2>10. Contact Information</h2>
 <p>If you have questions about this Privacy Policy, our privacy practices, or our games:</p>
-<p><strong>Developer:</strong> Marco Del Pin<br>
-<strong>Company:</strong> PineSoft<br>
-<strong>Email:</strong> marco.delpin@gmail.com</p>
+<p><strong>Company:</strong> PineSoft<br>
+<strong>Email:</strong> support@pinesoft.dev<br>
+<strong>Website:</strong> https://pinesoft.dev</p>
 
 <p><strong>Response Time:</strong> We typically respond to privacy inquiries within 48 hours.</p>
 </div>
@@ -153,7 +153,7 @@
 
 <div class="footer">
     <p><small>This privacy policy is specifically designed for simple, offline mobile games and will be updated as our services evolve. We believe in transparency and user privacy by design.</small></p>
-    <p><small>© 2025 PineSoft - Marco Del Pin. All rights reserved.</small></p>
+    <p><small>© 2025 PineSoft. All rights reserved.</small></p>
     <p><small>Repository: <a href="https://github.com/marcodelpin/pinesoft-privacy" target="_blank">GitHub</a> | Last commit: <span id="last-update">January 8, 2025</span></small></p>
 </div>
 
